# microjson

./: CMakeLists.txt  LICENSE  README.md  conanfile.py  microjson.cpp  microjson.h  microjsonConfig.cmake.in
tests/: CMakeLists.txt  main.cpp
